# ezo-driver

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  library.json  library.properties
adapters/: README.md
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/csrc/include/: ezo.h  ezo_i2c.h  ezo_i2c_linux_i2c.h  ezo_uart.h  ezo_uart_posix_serial.h
bindings/python/csrc/platform/linux/: ezo_i2c_linux_i2c.c  ezo_uart_posix_serial.c
bindings/python/csrc/src/: ezo.c  ezo_calibration_transfer.c  ezo_common.c  ezo_control.c  ezo_do.c  ezo_ec.c  ezo_hum.c  ezo_i2c.c  ezo_orp.c  ezo_parse.c  ezo_ph.c  ezo_product.c  ezo_rtd.c  ezo_schema.c  ezo_uart.c
bindings/python/src/ezo_driver_py/: __init__.py  _core.pyx  constants.py  errors.py
bindings/python/tests/: test_import.py
cmake/: ezo_driverConfig.cmake.in
docs/: api-contract.md  architecture.md  c-api-draft.md  canonical-call-flows.md  canonical-library-direction.md  decision-log.md  error-status-model.md  examples.md  public-api-layers.md  python-binding-cutover-plan.md  python-binding-reset-architecture.md  python-bindings-closeout-next-steps.md  python-bindings-linux-plan.md  support-matrix.md  timing-semantics.md  transport-contract.md
examples/: README.md  linux_ph_read.c  linux_ph_uart_read.c  linux_read.c  linux_uart_read.c
src/: README.md  ezo.c  ezo.h  ezo_calibration_transfer.c  ezo_calibration_transfer.h  ezo_common.c  ezo_common.h  ezo_control.c  ezo_control.h  ezo_do.c  ezo_do.h  ezo_ec.c  ezo_ec.h  ezo_hum.c  ezo_hum.h  ezo_i2c.c  ezo_i2c.h  ezo_i2c.hpp  (+15 more)
(+112 files in other folders)
