[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "ezo-driver-py"
version = "0.1.0"
description = "Linux Python bindings for ezo-driver"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "ezo-driver maintainers" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: C",
  "Operating System :: POSIX :: Linux",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest>=7"]
